--- a/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
@@ -7,6 +7,7 @@ metadata:
     codefresh.io/cert: slack-job
     argocd.argoproj.io/sync-wave: "30"
     argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
