--- a/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/smoke-tests.yml
@@ -7,6 +7,7 @@ metadata:
     codefresh.io/cert: smoke-job
     argocd.argoproj.io/sync-wave: "10"
     argocd.argoproj.io/hook: PostSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
