--- a/sync-hooks-waves/06-waves-and-hooks/grafana-notify.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/grafana-notify.yml
@@ -7,6 +7,7 @@ metadata:
     codefresh.io/cert: grafana-job
     argocd.argoproj.io/sync-wave: "-10"
     argocd.argoproj.io/hook: Sync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
