--- a/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/db-upgrade.yml
@@ -7,6 +7,7 @@ metadata:
     codefresh.io/cert: db-job
     argocd.argoproj.io/sync-wave: "10"
     argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
