--- a/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/disable-alerts.yml
@@ -7,6 +7,7 @@ metadata:
     codefresh.io/cert: disable-job
     argocd.argoproj.io/sync-wave: "20"
     argocd.argoproj.io/hook: PreSync
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded
 spec:
   template:
     spec:
