--- a/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/cleanup.yml
@@ -5,6 +5,7 @@ metadata:
   generateName: cleanup-after-sync-
   labels:
     codefresh.io/cert: cleanup-job
+  annotations:
     argocd.argoproj.io/sync-wave: "20"
     argocd.argoproj.io/hook: PostSync
     argocd.argoproj.io/hook-delete-policy: HookSucceeded
