--- a/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
+++ b/sync-hooks-waves/06-waves-and-hooks/slack-notify.yml
@@ -5,9 +5,9 @@ metadata:
   generateName: slack-notify-
   labels:
     codefresh.io/cert: slack-job
-    argocd.argoproj.io/sync-wave: "30"
+  annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded
+    argocd.argoproj.io/sync-wave: "30"
 spec:
   template:
     spec:
