--- a/custom-diff/applications/external-helm-app.yml
+++ b/custom-diff/applications/external-helm-app.yml
@@ -14,7 +14,8 @@ spec:
     - group: ""
       kind: Secret
       jsonPointers:
-        - /data/my-password
+        - /data
+        - /stringData
   project: default
 
   source:
